fix(ui): contrast issues (#274)

--- a/components/content-section/server.css
+++ b/components/content-section/server.css
@@ -79,7 +79,7 @@
     th,
     td {
       padding: 0.5rem 0.75rem;
-      border: 1px solid var(--color-text-secondary);
+      border: 1px solid var(--color-border-primary);
     }
 
     th {
