--- a/components/icon/global.css
+++ b/components/icon/global.css
@@ -18,11 +18,9 @@
 
     vertical-align: middle;
 
-    background-color: var(--color-border-primary);
+    background-color: var(--color-text-secondary);
 
-    mask-repeat: no-repeat;
-    mask-position: center;
-    mask-size: contain;
+    mask-size: cover;
   }
 
   /* See https://github.com/mdn/rari/blob/927fac7cb89c7f7e49dd3ff265c3d74ad89d6490/crates/rari-doc/src/templ/templs/badges.rs#L43-L47 */
